# study-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.chainlit/: config.toml
public/: stylesheet.css
src/config/: __init__.py
src/study_chatbot/: __init__.py  agent.py  app.py  instructions.py
tests/: test_echo.py
